New intro page. Navbar and bottom css's files have been changed to fixes some design bugs. New navbar for intro.

--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -6,7 +6,8 @@
     --blue: #7bccb9;
     --orange: #e9635a;
     --yellow: #f1d64b;
-    --darkgray: #6b6b6b;
+    --darkgray: #5d5d5d;
+    --lightblack: #404040;
     --gray: #929292;
     --lightgray: #b5b5b5;
 
