--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3040,7 +3040,7 @@
   --pink: #f66d9b;
   --red: #e3342f;
   --orange: #f6993f;
-  --yellow: #ffed4a;
+  --yellow: #fff287;
   --green: #38c172;
   --teal: #4dc0b5;
   --cyan: #6cb2eb;
