--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,143 +1,18 @@
-@import "https://fonts.googleapis.com/css?family=Lato:400,700";
 
-
-
-
-
-#submit{
-  background-color:#eb9486;
-  color:white;
+body{
+overflow-x: hidden;
 }
 
 
-.img-banner{
- width:100%;
-}
-
-.sm-padding{
-  padding:25px;
-}
-
-
-.m-padding{
-  padding-top: 100px;
-}
-
-.l-padding{
-  padding:100px;
+.btn-yellow{
+    background-color: var(--yellow);
+    width: 200px;
+    font-family: "Trebuchet MS";
+    font-weight: bold;
 }
 
 
-.sub{
-  text-align:center;
+.btn-yellow:hover{
+    background-color: #f6de63;
 }
 
-.caption{
-  font-size:12px;
-}
-
-#nm-brand{
-  height:150px;
-  width:auto;
-}
-
-.hide{
-    display: none;
-}
-
-
-
-
-h2{
-  font-size:40px;
-  font-family: 'Raleway', sans-serif;
-  letter-spacing: 3px;
-
-}
-h3{
-  padding:-10px!important;
-  font-size:25px;
-font-family: 'Vidaloka', serif;
-  letter-spacing: 3px;
-
-}
-h6{
-  font-size:15px;
-  font-family: 'Raleway', sans-serif;
-  letter-spacing: 0px;
-
-}
-
-@media only screen and (max-width: 1000px) {
-    h2 {
-        font-size: 30px;
-    }
-
-    h3 {
-        font-size: 15px;
-
-    }
-}
-
-
-@media only screen and (max-width: 770px) {
-h2{
-  font-size:20px;
-}
-h3{
-  font-size:10px;
-
-}
-}
-
-
-
-#bestProductsCarousel  .carousel-control-next-icon:after
-{
-  content: '>';
-  font-size: 20px;
-  color: black;
-}
-
-#bestProductsCarousel  .carousel-control-prev-icon:after  {
-  content: '<';
-  font-size: 20px;
-  color: black;
-}
-
-#bestProductsCarousel  .carousel-control-prev-icon:hover{
-    color: black!important;
-
-}
-
-#bestProductsCarousel  .carousel-control-prev-icon,#bestProductsCarousel
-.carousel-control-next-icon {
-  height: 35px;
-  width: 35px;
-  outline: black;
-  background-size: 50%, 50%;
-  border-radius: 50%;
-  border: 1px solid black;
-  background-image: none;
-}
-
-
-#bestProductsCarousel  .carousel-control-prev {
-  margin-left: -10%;
-
-}
-
-#bestProductsCarousel  .carousel-control-next {
-  margin-right: -10%;
-}
-
-
-
-#top-btn {
-  display: none;
-  position: fixed;
-  right:1%;
-  top:95%;
-  z-index: 99;
-  cursor: pointer;
-}
