New "About us" page.

--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -2,7 +2,7 @@
     --green:#e1e55a;
     --pink: #f2b3bb;
     --darkpink:#e48e99;
-    --purple: #b7b4e9;
+    --purple: #a7adee;
     --blue: #7bccb9;
     --orange: #e9635a;
     --yellow: #f1d64b;
