--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,3 +141,79 @@ h3{
   z-index: 99;
   cursor: pointer;
 }
+
+
+
+
+
+
+
+
+
+/* DELETE ALL FROM ABOVE*/
+
+
+/* STYLESHEET NEW*/
+
+
+body{
+    overflow-x: hidden;
+}
+
+
+.btn-yellow{
+    background-color: var(--yellow);
+    width: 200px;
+    font-family: "Trebuchet MS";
+    font-weight: bold;
+}
+
+
+.btn-yellow:hover{
+    background-color: #f6de63;
+}
+
+
+
+.btn-join{
+    background-color: var(--blue);
+    width: 300px;
+    font-family: "Trebuchet MS";
+    font-weight: bold;
+    color: black;
+    font-size: 20px;
+}
+
+.btn-join:hover{
+    background-color: #99e5d3;
+}
+
+
+
+.btn-blue{
+    background-color: var(--blue);
+    width: 200px;
+    font-family: "Trebuchet MS";
+    font-weight: bold;
+}
+
+
+
+.btn-blue:hover{
+    background-color: #7bccb9;
+}
+
+
+.btn-pink{
+    background-color: var(--pink);
+    width: 200px;
+    font-family: "Trebuchet MS";
+    font-weight: bold;
+}
+
+
+
+.btn-pink:hover{
+    background-color: #fcbfc7;
+}
+
