--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,7 +79,7 @@ body{
     text-align: center;
     border-bottom: 1px solid var(--lightgray);
     line-height: 0.1em;
-    margin: 10px 0 20px;
+    margin: 5em 0 3em;
 }
 
 .separator h2 span {
