--- a/public/css/style.css
+++ b/public/css/style.css
@@ -226,6 +226,13 @@ body{
     background-color: var(--green);
 }
 
+.bg-pink{
+    background-color: var(--pink);
+}
+.bg-gray{
+    background-color: var(--darkwhite);
+}
+
 
 .georgia{
     font-family: Georgia;
