New header. Chenge of navbar logo. And link to wiki products were added.

--- a/public/css/intro-style.css
+++ b/public/css/intro-style.css
@@ -1,6 +1,7 @@
 
  main{
-    background-color: var(--pink);
+    background-color: #f5f5f5;
+
 }
 
  #header{
@@ -9,7 +10,21 @@
     background-image: url("/images/pictures/header1.jpg") ;
     background-repeat:no-repeat;
     background-position: center center;
+     background-size: auto 100%;
 }
+ @media only screen and (max-width: 768px) {
+
+
+     #header{
+         width: auto;
+         height: 600px;
+         background-image: url("/images/pictures/header1b.jpg") ;
+         background-repeat:no-repeat;
+         background-position: center bottom;
+         background-size: auto 100%;
+     }
+ }
+
 
 
  #products{
@@ -34,28 +49,35 @@
 }
 
  h1{
-    color: white;
-    font-weight: bold;
-    font-family:Bebas;
-    font-size: 5em;
-    line-height: .9em;
-    margin: 0px!important;
+     font-size: 2em;
+     font-family: "Microsoft JhengHei";
 
 }
  h2{
-    color: white;
-    font-family: Georgia;
-    font-size: 3em;
-    margin: 0px!important;
-}
- h3{
-    color: white;
-    font-size: 1.25em;
-    font-family: "Trebuchet MS";
+     font-size: 12px;
+     font-family: "Microsoft JhengHei";
+     font-weight: lighter!important;
 
-}
+ }
+
 
  .title{
      padding-bottom: 1em;
      line-height: 25em!important;
  }
+
+#header .link{
+     color: black;
+    text-decoration: underline;
+    font-size: 12px;
+    font-family: "Microsoft JhengHei";
+    font-weight: bold!important;
+ }
+
+
+
+ .wiki-link img:hover {
+     opacity: 50%;
+ }
+
+
