New wiki page design.

--- a/public/css/colors.css
+++ b/public/css/colors.css
@@ -5,7 +5,7 @@
     --darkpink:#e48e99;
     --purple: #b7b4e9;
     --blue: #7bccb9;
-    --orange: #e9635a;
+    --orange: #dd8219;
     --yellow: #f1d64b;
     --mblack: #262626;
     --darkgray: #5d5d5d;
