--- a/public/css/subscripion-style.css
+++ b/public/css/subscripion-style.css
@@ -51,13 +51,17 @@ h5 {
 
 h6 {
     text-transform: uppercase;
-    font-size: 2em;
+    font-size: 18px;
     font-weight: bold;
+    font-family: "Trebuchet MS";
+
+
 }
 
 h7 {
     text-transform: uppercase;
-    font-size: 1.25em;
+    font-size: 14px;
+    font-family: "Trebuchet MS";
 
     font-weight: bold;
 }
@@ -76,24 +80,27 @@ p {
     width: 95%;
     border-style: solid;
     border-width: 1px;
-    border-color: var(--green);
+    border-color: var(--darkwhite);
     background-color: white;
+    padding: 2rem 0 2rem 0;
+    height: 100%;
+}
+
+#packages p{
+    font-size: 13px;
 
 }
 
-
-
 #wrapper .text {
     background: rgba(236, 236, 236, 0.85);
-    height: 94%;
+    height: 100%;
     position:absolute;
-    top:1.5rem;
-    left:1rem;
-    right: 1rem;
+    top:0rem;
+    padding: 2rem 2rem 2rem 2rem;
+
     visibility:hidden;
     text-align: justify;
     color: black;
-    padding: 2rem 2rem 2rem 2rem;
 
     font-size: 1.5vmin;
 
