--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -15,17 +15,9 @@
 
 #footer i{
     padding-right: 1em;
-    color: var(--pink);
+    color: var(--oldpink);
 }
 
-#footer .btn-submit{
-background-color: var(--blue);
-    border-radius: 0;
-    padding: 0px 25px 0 35px;
-    font-family: "Trebuchet MS";
-    font-size: 11px;
-    font-weight: bold;
-}
 
 #footer a{
     color:black;
