--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,86 +4,94 @@ body{
     overflow-x: hidden;
 }
 
-.btn-yellow{
-    background-color: var(--yellow);
-    width: 200px;
+
+/* BUTTONS*/
+
+.btn{
     font-family: "Trebuchet MS";
     font-weight: bold;
+    font-size: 13px;
+    width: 150px;
+
+}
+
+.btn-submit{
+    background-color: var(--pink);
+    width: 100px;
+    font-size: 11px;
+
+}
+
+.btn-submit:hover{
+    background-color: rgba(var(--pink-rgb),.7);
+}
+
+
+
+.btn-join{
+    background-color: var(--blue);
+    width: 200px;
+    font-size: 16px;
+}
+
+.btn-join:hover{
+    background-color: rgba(var(--blue-rgb),.7);
+}
+
+.btn-login{
+    background-color: var(--green);
+    width: 125px;
+    font-size: 15px;
+}
+
+.btn-login:hover{
+    background-color: rgba(var(--green-rgb),.7);
+}
+
+
+.btn-yellow{
+    background-color: var(--yellow);
 }
 
 
 .btn-yellow:hover{
-    background-color: #f6de63;
+    background-color: rgba(var(--yellow-rgb),.7);
 }
-
-.btn-join{
-    background-color: var(--blue);
-    width: 300px;
-    font-family: "Trebuchet MS";
-    font-weight: bold;
-    color: black;
-    font-size: 20px;
-}
-
-.btn-join:hover{
-    background-color: #99e5d3;
-}
-
-
-
-.btn-blue{
-    background-color: var(--blue);
-    width: 200px;
-    font-family: "Trebuchet MS";
-    font-weight: bold;
-}
-
-.btn-blue:hover{
-    background-color: #7bccb9;
-}
-
 
 .btn-pink{
     background-color: var(--pink);
-    width: 200px;
-    font-family: "Trebuchet MS";
-    font-weight: bold;
 }
-
-
 
 .btn-pink:hover{
-    background-color: #fcbfc7;
+    background-color: rgba(var(--pink-rgb),.7);
 }
-
 
 .btn-green{
     background-color: var(--green);
-    width: 200px;
-    font-family: "Trebuchet MS";
-    font-weight: bold;
 }
-
-
 
 .btn-green:hover{
-    background-color: #f2f675;
+    background-color: rgba(var(--green-rgb),.7);
 }
-
 
 .btn-orange{
     background-color: var(--orange);
-    width: 200px;
-    font-family: "Trebuchet MS";
-    font-weight: bold;
 }
-
-
 
 .btn-orange:hover{
-    background-color: #f8756c;
+    background-color: rgba(var(--orange-rgb),.7);
 }
 
+.btn-purple{
+    background-color: var(--purple);
+}
+
+
+.btn-purple:hover{
+    background-color: rgba(var(--purple-rgb),.7);
+}
+
+/* BACKGROUNDS*/
 
 .bg-yellow{
     background-color: var(--yellow);
@@ -118,12 +126,15 @@ body{
     background-color: var(--lightblue);
 }
 
+/* FONTS*/
 
 .georgia{
     font-family: Georgia;
     font-weight: normal;
 }
 
+
+/* SEPARATORS */
 
 .separator h2 {
     width: 100%;
@@ -141,12 +152,16 @@ body{
 
 }
 
-
+/* POSITION ALIGNS */
 .center{
     align-items: center;
 }
 
 
+
+
+
+/* BACKGROUNDS PATTERNS*/
 
 .texture-tablecloth{
     background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.5) 50%, transparent 50%),
