--- a/public/css/account-style.css
+++ b/public/css/account-style.css
@@ -1,32 +1,19 @@
-#header{
-    background: linear-gradient(90deg, rgba(217,232,239,1) 50%, rgba(248,248,248,1) 50%);
 
-}
-
-
-@media only screen and (max-width: 768px) {
-    #header{
-        padding-top: 25%;
-        background: linear-gradient(360deg, rgba(217,232,239,1) 50%, rgba(248,248,248,1) 50%);
-
-    }
+#login,#banner{
+    height: 750px;
 
 }
 
 
 #banner {
-    height: 650px;
+    background-image: url("/images/pictures/info2.jpeg");
+    background-color: white;
     background-repeat: no-repeat;
-    background-position: right bottom;
-    background-image: url("/images/pictures/info1.jpg");
-    background-size:  80%;
-
-
+    background-position: top;
+    background-size:cover;
 }
 
-#login{
-    padding: 5em 0 5em;
-}
+
 
 h1 {
     color: var(--darkgray);
@@ -36,14 +23,7 @@ h1 {
     line-height: 1.5em;
 }
 
-h2 {
-    color: var(--darkgray);
-    font-weight: bold;
-    font-family: "Trebuchet MS";
-    font-size: 1.50em;
-    line-height: 1.5em;
 
-}
 
 p {
     font-family: Arial;
@@ -52,13 +32,29 @@ p {
 
 }
 
+h2 {
+    font-family: Helvetica;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 1.25em;
+    padding: .5em;
+    color: white;
+}
 
+.brand-title{
+    border: 4px solid white;
+    margin: auto;
+    padding: 2em;
+    width: 200px;
+    height: 200px;
+    align-content: center;
+    user-select: none;
 
+}
 
-
-
-
-
+.btn-orange{
+    color: white!important;
+}
 
 
 
