--- a/public/css/subscripion-style.css
+++ b/public/css/subscripion-style.css
@@ -18,24 +18,14 @@ h1 {
 
 }
 
-h2 {
-    color: black;
-    text-transform: uppercase;
-    font-family: "Trebuchet MS";
-    font-size: 1em;
-
-    font-weight: bold;
-}
-
 h3 {
     color: var(--lightblack);
-    font-family: "Trebuchet MS";
     font-family: Georgia;
     font-size: 2.5em;
 }
 
 h4 {
-    color: var(--darkgray);
+    color: var(--gray);
     font-weight: bold;
     font-family: "Trebuchet MS";
     font-size: 1.25em;
@@ -66,12 +56,6 @@ h7 {
     font-weight: bold;
 }
 
-p {
-    font-family: Arial;
-    font-size: 15px;
-    color: var(--lightblack);
-
-}
 
 
 
