--- a/public/css/wiki-style.css
+++ b/public/css/wiki-style.css
@@ -9,7 +9,11 @@ main{
     background-color: white;
 }
 
-#products{
+.navbar{
+    background-color: white!important;
+}
+
+#skincare{
     background-image: url("/images/pictures/header4b.png") ;
     background-position: top center;
     background-repeat: repeat-x;
@@ -21,15 +25,14 @@ main{
 
 
 h1{
-    color: var(--darkgray);
+    color: var(--gray);
     font-weight: bold;
     font-family: "Trebuchet MS";
     font-size: 1.25em;
 
 }
 h2 {
-
-    color: var(--mblack);
+    color: var(--lightblack);
     font-family: Georgia;
     font-size: 2.5em;
 }
@@ -66,14 +69,14 @@ h5{
 
 
 
-#header img{
+#header img,  .products img{
     text-align: center;
     height: 125px;
     width: auto;
 }
 
 
-#header label{
+#header label,  .products label{
     text-align: center;
     padding: 1em 0 1em 0;
     color: var(--darkgray);
@@ -84,17 +87,23 @@ h5{
 
 }
 
-#products{
+#skincare{
     font-family: Arial;
     font-size: 15px;
     color: var(--lightblack);
     text-align: justify;
 }
 
-#products article{
+#skincare article{
     padding-top: 10%;
 }
 
 .wiki-link img:hover,.wiki-link:hover {
     opacity: 50%;
+}
+
+
+.btn-join{
+    width: 300px!important;
+    font-size: 25px!important;
 }
