Fix: Section id named 'header' replaced with 'intro'.

--- a/public/css/about-style.css
+++ b/public/css/about-style.css
@@ -1,4 +1,4 @@
-#header{
+#intro{
     width: auto;
     background-image: url("/images/pictures/header2.png") ;
     background-position:50% 50%;  /* Sets reference point to scale from */
@@ -10,7 +10,7 @@
 
 }
 
-#header p{
+#intro p{
     color: black;
     font-family: Arial;
     font-size: 18px;
