--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,6 +91,30 @@ body{
     background-color: rgba(var(--purple-rgb),.7);
 }
 
+
+
+/* SCROLL BUTTON*/
+#scrollUpButton {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: var(--lightgray);
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    border-radius: 100%; /* Rounded corners */
+    font-size: 25px; /* Increase font size */
+    height: 50px;
+    width: 50px;
+}
+
+#scrollUpButton:hover {
+    background-color: var(--darkwhite);
+}
+
 /* BACKGROUNDS*/
 
 .bg-yellow{
