--- a/public/css/modules/navbar.css
+++ b/public/css/modules/navbar.css
@@ -1,86 +1,43 @@
+/* center the logo */
 .navbar {
-    top: 0px!important;
     position: absolute;
-    width: 100%;
-    margin-bottom: 0px!important;
-    background-color: transparent;
-    z-index: 9999;
+    background-color: rgba(255, 255, 255, 0.3) !important;
+width: 100%;
+    justify-content: center;
+    padding-top: 2em;
+font-size: 16px;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
 
 }
-
-#navbar2 {
-    position: relative !important;
-    padding: 2em;
-    background-color: #ffffff;
-
-}
-
-
-#navbar1 img, #navbar4 img {
-    width: 320px;
+img{
+    width: 300px;
     height: auto;
-    padding: 20px;
 }
 
-.bg-transparent {
-    border-bottom: 2px solid white;
+/* in order to center the logo */
+.navbar .navbar-toggler {
+    position: absolute;
+    right: 1rem;
+    top: .5rem;
 }
 
-
-
-#navbar2 img {
-    width: 350px;
-    height: auto;
-
+/* center all navbar items */
+.navbar-nav {
+    align-items: center;
 }
 
-#navbar3 img {
-    width: 250px;
-    height: auto;
-
-}
-
-
-#promo {
-    background-color: black;
-    color: white;
-    font-family: "Trebuchet MS";
-    font-size: 12px;
-}
-
-
-.navbar li a,
-.navbar .navbar-brand {
-    color: black !important;
-    font-size: 15px !important;
-    font-weight: bold;
-
-
-}
-
-.navbar-nav li a:hover,
-.navbar-nav li.active a {
-    color: #2b2b2b!important;
-}
-
-
-@media only screen and (max-width: 992px) {
-
-#navbar1{
-    background-color: var(--mwhite);
-
-}
-
-    .navbar-nav li a:hover,
-    .navbar-nav li.active a {
-        color: var(--mblack) !important;
-        background-color: #efefef;
+/* since it's expanding at lg */
+@media(min-width: 992px) {
+    /* in order to display in 2 rows */
+    .navbar-expand-lg {
+        flex-flow: column nowrap;
     }
 
-}
-
-
-li{
-    margin-right: 15px;
-
+    /* same logic as the navbar-toggler above */
+    .navbar-nav.upper-controls {
+        position: absolute;
+        right: 1rem;
+        top: .5rem;
+        font-size: 85%;
+    }
 }
