New: Navbar's design.  v3

--- a/public/css/pages/cart.css
+++ b/public/css/pages/cart.css
@@ -33,7 +33,7 @@ h4 {
 
 }
 
-p, input, .form-check  {
+#cart p, input, .form-check  {
     font-family: Arial!important;
     font-size: 12px!important;
     color: var(--lightblack);
