--- a/public/css/modules/navbar.css
+++ b/public/css/modules/navbar.css
@@ -1,43 +1,100 @@
-/* center the logo */
 .navbar {
-    position: absolute;
-    background-color: rgba(255, 255, 255, 0.3) !important;
-width: 100%;
-    justify-content: center;
-    padding-top: 2em;
-font-size: 16px;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
+    top: 0px!important;
+    width: 100%;
+    margin-bottom: 0px!important;
+    z-index: 9999;
 
 }
-img{
-    width: 300px;
+
+.actions-navbar{
+    background-color: var(--oldpink);
+}
+
+
+.actions-navbar img {
+    width: 250px;
     height: auto;
 }
 
-/* in order to center the logo */
-.navbar .navbar-toggler {
-    position: absolute;
-    right: 1rem;
-    top: .5rem;
+.carousel-item{
+    color: black;
+    font-size: 12px;
+    font-weight: bold;
+    font-family: "Trebuchet MS";
+    text-transform: uppercase;
+    padding: 10px 30px 0 30px;
+
+
 }
 
-/* center all navbar items */
-.navbar-nav {
+div.centre {
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
-/* since it's expanding at lg */
-@media(min-width: 992px) {
-    /* in order to display in 2 rows */
-    .navbar-expand-lg {
-        flex-flow: column nowrap;
+.secondary-navbar{
+    padding: 0px;
+    font-size: 14px;
+    font-weight: bold;
+    background-color: #f3f3f3;
+    box-shadow: 0px 10px 25px 0px rgba(0,0,0,0.1);
+
+
+}
+
+.secondary-navbar li a, .actions-navbar a{
+    color: black!important;
+}
+.secondary-navbar li a:hover, .actions-navbar a:hover {
+    color: #5f5f5f!important;
+}
+
+.carousel-control-next,
+.carousel-control-prev /*, .carousel-indicators */ {
+    filter: invert(100%);
+}
+
+li{
+    margin-right: 10px;
+    margin-left: 10px;
+
+}
+
+@media (min-width: 992px) {
+    .visible-lg{
+        display: none;
     }
 
-    /* same logic as the navbar-toggler above */
-    .navbar-nav.upper-controls {
-        position: absolute;
-        right: 1rem;
-        top: .5rem;
-        font-size: 85%;
+}
+
+
+@media (min-width: 768px) {
+    .visible-md{
+        display: none;
     }
+
+
+}
+
+@media (min-width: 768px) {
+    .visible-sm{
+        display: none;
+    }
+
+}
+
+@media (max-width: 767px) {
+    .hide-sm{
+display: none;
+    }
+
+    .brand{
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        left: 0;
+top: 20px;
+    }
+
 }
