--- a/public/css/pages/cart.css
+++ b/public/css/pages/cart.css
@@ -1,37 +1,32 @@
 #cart{
     background-color: white;
-    padding: 5em 0 5em;
+    padding: 5em 0 6em;
 
 }
 
 
 
 h2 {
+    padding-top: 1.5em;
     color: var(--darkgray);
     font-weight: bold;
-    font-family: "Microsoft JhengHei";
+
+    font-family: "Trebuchet MS";
     font-size: 18px;
-    line-height: 1.5em;
 
 }
 
 
 h3 {
     color: var(--darkgray);
-    font-weight: bold;
-    font-family: "Trebuchet MS";
+    font-weight: lighter;
+
+    font-family: "Microsoft JhengHei";
     font-size: 16px;
     line-height: 1.5em;
 
 }
 
-h4 {
-    color: var(--darkgray);
-    font-family: "Trebuchet MS";
-    font-size: 14px;
-    line-height: 1.5em;
-
-}
 
 #cart p, input, .form-check  {
     font-family: Arial!important;
