--- a/public/css/modules/footer.css
+++ b/public/css/modules/footer.css
@@ -1,21 +1,30 @@
 @import url(../abstracts/colors.css);
 
+#footer{
+    background-color: white;
+    padding-top: 1em;
+    padding-bottom: 2em;
+
+    box-shadow: 0px 10px 25px 0px rgba(0,0,0,0.1);
+
+}
+
 #footer p{
     font-family: Arial;
-    font-size: 13px;
+    font-size: 14px;
 }
 
 #footer label{
     padding-bottom: .5em;
     font-family: "Trebuchet MS";
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
-    color:var(--gray);
+    color:var(--darkgray);
 }
 
 #footer i{
     padding-right: 1em;
-    color: var(--oldpink);
+    color: var(--pink);
 }
 
 
@@ -23,7 +32,8 @@
     color:black;
 
 }
-a:hover{
+
+#footer a:hover{
     color: var(--darkgray);
     text-decoration: none;
 }
