--- a/public/css/modules/navbar.css
+++ b/public/css/modules/navbar.css
@@ -3,6 +3,7 @@
     width: 100%;
     margin-bottom: 0px!important;
     z-index: 9999;
+    font-family: "Trebuchet MS";
 
 }
 
@@ -20,33 +21,38 @@
     color: black;
     font-size: 12px;
     font-weight: bold;
-    font-family: "Trebuchet MS";
     text-transform: uppercase;
     padding: 10px 30px 0 30px;
 
 
 }
 
-div.centre {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 .secondary-navbar{
     padding: 0px;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
+
+
+
     background-color: #f3f3f3;
     box-shadow: 0px 10px 25px 0px rgba(0,0,0,0.1);
 
 
 }
 
-.secondary-navbar li a, .actions-navbar a{
+.secondary-navbar li a{
+    color:var(--darkgray)!important;
+}
+.secondary-navbar li a:hover{
+    color: var(--gray)!important;
+}
+
+
+.actions-navbar a{
     color: black!important;
 }
-.secondary-navbar li a:hover, .actions-navbar a:hover {
+ .actions-navbar a:hover {
     color: #5f5f5f!important;
 }
 
