--- a/public/css/abstracts/colors.css
+++ b/public/css/abstracts/colors.css
@@ -21,6 +21,7 @@
     --gray: #929292;
     --lightgray: #b5b5b5;
     --mwhite: #f6f6f6;
+    --mmwhite:#f8f8f8;
     --darkwhite: #d0d0d0;
     --lightblue:#d9e8ef;
 
