--- a/public/css/pages/account.css
+++ b/public/css/pages/account.css
@@ -1,79 +1,87 @@
 
-#login,#banner{
-    height: 750px;
 
-}
+#user-info{
+    padding: 3em 0 10em;
 
-
-#banner {
-    background-image: url("/images/pictures/info2.jpeg");
     background-color: white;
-    background-repeat: no-repeat;
-    background-position: top;
-    background-size:cover;
+}
+
+#account .nav-link{
+    color: var(--darkgray);
+    font-family:"Trebuchet MS";
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: bold;
+
+}
+
+#account .nav-link:hover{
+    color: var(--gray);
+}
+
+h1{
+    color: black;
+    font-weight: bold;
+    font-family:Georgia;
+    font-size: 4em;
+    line-height: .5em;
+
+}
+
+.title h2{
+    text-transform: uppercase;
+    font-size: 20px;
+    font-family: 'Trebuchet MS';
+}
+
+.title{
+    padding: 6em 0 2em;
 }
 
 
 
-h1 {
+h3{
+    color: var(--darkwhite);
+    font-weight: bold;
+    font-family:"Trebuchet MS";
+    font-size: 5em;
+}
+
+h4{
     color: var(--darkgray);
     font-weight: bold;
-    font-family: "Trebuchet MS";
-    font-size: 2.5em;
-    line-height: 1.5em;
+    font-family:"Trebuchet MS";
+    font-size: 1.5em;
+    text-transform: uppercase;
 }
 
 
-
-p {
-    font-family: Arial;
-    font-size: 15px;
-    color: var(--lightblack);
+#account p,tr,#address p {
+    font-family: Arial!important;
+    font-size: 14px!important;
 
 }
 
-h2 {
-    font-family: Helvetica;
-    font-size: 20px;
+
+.form-group .row{
+    padding-top: .5em;
+}
+
+
+h6 {
+    text-transform: uppercase;
+    font-size: 18px;
     font-weight: bold;
-    line-height: 1.25em;
-    padding: .5em;
-    color: white;
-}
+    font-family: "Trebuchet MS";
 
-.brand-title{
-    border: 4px solid white;
-    margin: auto;
-    padding: 2em;
-    width: 200px;
-    height: 200px;
-    align-content: center;
-    user-select: none;
 
 }
 
-.btn-orange{
-    color: white!important;
+h7 {
+    text-transform: uppercase;
+    font-size: 14px;
+    font-family: "Trebuchet MS";
+
+    font-weight: bold;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
