--- a/public/css/modules/footer.css
+++ b/public/css/modules/footer.css
@@ -4,22 +4,17 @@
     background-color: white;
     padding-top: 1em;
     padding-bottom: 2em;
-
     box-shadow: 0px 10px 25px 0px rgba(0,0,0,0.1);
-
 }
 
-#footer p{
-    font-family: Arial;
-    font-size: 14px;
-}
+
 
 #footer label{
     padding-bottom: .5em;
-    font-family: "Trebuchet MS";
+    font-family: "Trebuchet MS"!important;
     font-size: 16px;
     font-weight: bold;
-    color:var(--darkgray);
+    color:var(--lightblack)!important;
 }
 
 #footer i{
@@ -30,6 +25,7 @@
 
 #footer a{
     color:black;
+
 
 }
 
