--- a/public/css/style.css
+++ b/public/css/style.css
@@ -360,3 +360,12 @@ hr.sep1{
     border-color: var(--gray) !important;
 
 }
+
+/**/
+
+.pt-6{
+    padding-top: 6em;
+}
+.pb-6{
+    padding-bottom: 6em;
+}
