Change: Bootstrap was upgraded to v5. Changes to fix style problems. Use of flaoting labels in forms.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -260,6 +260,9 @@ td{
     font-size: 13px!important;
 }
 
+a{
+    text-decoration: none;
+}
 .link{
     color: black;
     text-decoration: underline;
