--- a/public/css/style.css
+++ b/public/css/style.css
@@ -311,7 +311,12 @@ hr.sep1{
     align-items: center;
 }
 
-
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 
 
