--- a/public/css/modules/navbar.css
+++ b/public/css/modules/navbar.css
@@ -90,12 +90,14 @@ li{
 display: none;
     }
 
+
     .brand{
-        text-align: center;
+
         position: absolute;
-        width: 100%;
-        left: 0;
-top: 20px;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
 }
+
+
