--- a/public/css/pages/about.css
+++ b/public/css/pages/about.css
@@ -1,29 +1,31 @@
 #intro{
     width: auto;
     background-image: url("/images/pictures/header2.png") ;
-    background-position:50% 50%;  /* Sets reference point to scale from */
     background-size:cover;
     height: 850px;
     background-repeat:no-repeat;
-    background-position: top ;
+    background-position: center ;
+    box-shadow: 10px -50px 50px 50px #f8fafc inset;
 
 }
+
+#intro .title{
+    background-color: rgba(255,255,255,.75);
+    box-shadow: 0px 0px 50px 50px rgba(255,255,255,.75) ;
+border-radius: 100px;
+    padding: 2em;
+
+}
+
+
 
 #info .row{
     padding-top: 6em;
 }
 
 
-#join{
-    height: 10em;
-}
-
-
-#brands{
-    padding-bottom: 5em;
-}
 
 .btn-join{
-    width: 300px!important;
-    font-size: 25px!important;
+    width: 300px;
+    font-size: 25px;
 }
