--- a/public/css/pages/subscripion.css
+++ b/public/css/pages/subscripion.css
@@ -1,11 +1,13 @@
 
 #intro {
     width: auto;
-    height: 700px;
+    height: auto;
     background-image: url("/images/pictures/header3.jpg");
+    height: 700px;
+    background-size:750px auto;
     background-repeat: no-repeat;
-    background-position: center center;
-    background-color: var(--oldpink);
+    background-position:  center center;
+    background-color: var(--green);
 
 }
 
@@ -14,9 +16,7 @@
 .package {
     position: relative;
     width: 95%;
-    border-style: solid;
-    border-width: 1px;
-    border-color: var(--darkwhite);
+    border: solid 2px #f8f8f8;
     background-color: white;
     padding: 2rem 0 2rem 0;
     height: 100%;
